Fix resources list items alignment

--- a/src/components/ResourcesList/ResourcesList.module.scss
+++ b/src/components/ResourcesList/ResourcesList.module.scss
@@ -1,5 +1,6 @@
 .resourceListItem {
-  padding-left: 8px;
+  padding: 8px 4px;
+  align-items: flex-start;
 }
 .resourceListItemIcon {
   min-width: 44px;
